--- a/fogadas_zarouj/kinezet.css
+++ b/fogadas_zarouj/kinezet.css
@@ -188,3 +188,9 @@ body {
 .bet-box:hover {
   background-color: #ccc;
 }
+.register-bodycard {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
