--- a/fogadas_zarouj/kinezet.css
+++ b/fogadas_zarouj/kinezet.css
@@ -7,6 +7,74 @@ body {
   margin: 0;
 }
 
+.table {
+  border-collapse: collapse;
+  margin-bottom: 30px;
+  width: 100%;
+  max-width: 800px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #333;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+/*#region fogadasok.php*/
+.table-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+ 
+}
+.lent{
+  position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
+}
+.kozep{
+  text-align: center;
+}
+.table {
+  width: 50%;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+  border-radius: 10px;
+  background: linear-gradient(360deg ,#16222a, #24c6dc);
+color: white;
+}
+.cim2 {
+  display: inline-block;
+  width: 50%;
+  margin-left: 20vw;
+  
+}
+.container2 {
+  display: flex;
+  justify-content: space-between;
+}
+.table th,
+.table td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #24c6dc;
+}
+
+.table th {
+  background: linear-gradient( #16222a, #16222a);
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .table {
+    width: 100%;
+  }
+}
+
+/*#endregion fogadasok.php*/
+
 /*#region penztarca.php*/
 .button{
 
@@ -14,25 +82,33 @@ body {
  margin-right: 2vw;
  margin-left: 2vw;
  padding: 1vw;
+ border-radius: 10px;
 }
 
 .kozos1{
   display: inline-flex;
-  margin: 2% 2% 3% 2%;
-  width: 95vw;
-  min-height: 58vh;
+  margin: 2% 2% 3% 3.5%;
+  width: 96vw;
+  min-height: 55vh;
 }
 
 .penzfeltoltes {
-  background-color: lightseagreen;
+  background-color: #24c6dc;
   width: 100%;
   max-height: 40vh;
   border-radius: 13px;
   margin-right: 2%;
   text-align: center;
+  font-size: 20px;
+  color: black;
 }
-
-
+#inputppenz{
+  border-radius: 10px;
+  border: 2px solid black
+}
+#inputppenzbutton{
+  background-color: white;
+}
 /*#endregion penztarca.php*/
 
 /*#region grid*/
@@ -75,33 +151,16 @@ body {
   flex-direction: column;
 }
 
-/*.grid-container-penzkifizetes {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: "col1-penzkifizetes col2-penzkifizetes col3-penzkifizetes";
-  text-align: center;
-}
 
-.col1-penzkifizetes {
-  grid-area: col1-penzkifizetes;
-  flex-direction: column;
-}
-
-.col2-penzkifizetes {
-  grid-area: col2-penzkifizetes;
-  flex-direction: column;
-}
-
-.col3-penzkifizetes {
-  grid-area: col3-penzkifizetes;
-  flex-direction: column;
-}*/
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "col1 col2 col3";
   text-align: center;
+  max-height: 80vh;
+  overflow-y: scroll;
+
 }
 
 .col1 {
@@ -123,14 +182,35 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "col1-szorzok col2-szorzok col3-szorzok";
+  overflow-y: scroll;
+  max-height: 70vh;
+ 
+}
+.grid-container-szorzok::-webkit-scrollbar {
+  width: 10px;
+
+}
+
+.grid-container-szorzok::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, -1);
+  border-radius: 10px;
+}
+
+.grid-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.grid-container::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, -1);
+  border-radius: 10px;
 
 }
 
 .col1-szorzok {
   grid-area: col1-szorzok;
   flex-direction: column;
+  margin-top: 35.5%;
 }
-
 .col2-szorzok {
   grid-area: col2-szorzok;
   flex-direction: column;
@@ -139,6 +219,7 @@ body {
 .col3-szorzok {
   grid-area: col3-szorzok;
   flex-direction: column;
+  margin-top: 35.5%;
 }
 
 /*#endregion grid*/
@@ -207,7 +288,7 @@ header .login button {
   display: inline-flex;
   margin: 2% 2% 3% 2%;
   width: 95vw;
-  min-height: 100vh;
+  min-height: 80vh;
 
   /*overflow: hidden;*/
   /* overflow: scroll;*/
@@ -217,19 +298,20 @@ header .login button {
   width: 100%;
   border-radius: 13px;
   margin-right: 2%;
-
+  height: 80vh;
+  color: whitesmoke;
   background: linear-gradient(360deg, #16222a, #24c6dc);
 
 
 }
 
 .meccsek2 {
-  width: 50%;
+  width: 52%;
+  height: 80vh;
   border-radius: 13px;
   text-align: center;
- 
+  color: whitesmoke;
   background: linear-gradient(360deg, #16222a, #24c6dc);
-
 
 }
 
@@ -280,23 +362,35 @@ footer {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #16222a;
   margin: 15% auto;
   padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-  color: black;
+  border: 1px solid #24c6dc;
+  width: 30%;
+  color: #24c6dc;
+  text-align: center;
+  border-radius: 10px;
 }
 
-.close {
-  color: #aaa;
+#closebtn {
+  background-color: #16222a;
+  color: #24c6dc;
   float: right;
   font-size: 28px;
   font-weight: bold;
+  border:1px solid #24c6dc;
+  border-radius: 10px;
+}
+#kuld{
+  background-color: #16222a;
+  color: #24c6dc;
+  border:1px solid #24c6dc;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
-.close:hover,
-.close:focus {
+#closebtn:hover,
+#closebtn:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -310,6 +404,8 @@ footer {
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 5px 10px 15px #0b1858;
+  
+  
 }
 
 .bet-box:hover {
@@ -319,6 +415,7 @@ footer {
 /*#endregion fogad*/
 
 /*#region registerandlogin*/
+
 .register-bodycard {
  display: flex;
  justify-content: center;
