--- a/Fogadás_web/kinezet.css
+++ b/Fogadás_web/kinezet.css
@@ -14,6 +14,9 @@ body {
 .hr{
   height: 50%;
 }
+.hr2{
+  height: 50%;
+}
 .table {
   border-collapse: collapse;
   margin-bottom: 30px;
@@ -27,6 +30,17 @@ body {
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
+
+.kozepre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+
 /*#region fogadasok.php*/
 .table-container {
   display: flex;
